# cupywavelets

./: README.md  pyproject.toml
cupywt/: __init__.py  conv_fwt.py  utils.py
